--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -15,3 +15,21 @@
 #content {
   display: none;
 }
+@media screen and (max-width: 425px) {
+  #loading img {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media screen and (max-width: 600px) {
+  #loading img {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media screen and (max-width: 1024px) {
+  #loading img {
+    width: 200px;
+    height: 200px;
+  }
+}
