--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,7 +61,12 @@ main{
 .no-scroll {
   overflow: hidden;
 }
-
+@media screen and (min-width:769px) and (max-width: 1024px) {
+  main{
+    margin-left: 30vw;
+    width: 70vw;
+  }
+}
 @media screen and (max-width: 768px) {
   main{
     margin-left: 0;
