--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -146,6 +146,30 @@
   cursor: pointer;
 }
 
+@media screen and (min-width:769px) and (max-width: 1024px) {
+  .circle {
+    width: 55px;
+    height: 55px;
+  }
+
+  .circle-notif {
+    width: 55px;
+    height: 55px;
+
+    svg {
+      scale: 0.8;
+    }
+  }
+
+  // Arrow button
+  .arrow-button {
+    width: 70px;
+    height: 70px;
+    svg{
+      scale: 0.8;
+    }
+  }
+}
 
 @media screen and (max-width: 600px) {
   .circle {
@@ -167,6 +191,7 @@
       scale: 0.85;
     }
   }
+
   //SAVE
   .circle-save {
     top: 40px;
@@ -174,6 +199,7 @@
     height: 65px;
   }
 }
+
 @media screen and (max-width: 425px) {
   .circle {
     width: 65px;
@@ -194,6 +220,7 @@
       scale: 0.85;
     }
   }
+
   //SAVE
   .circle-save {
     top: 35px;
@@ -222,10 +249,12 @@
       scale: 0.8;
     }
   }
+
   //SAVE
   .circle-save {
     top: 25px;
     width: 60px;
     height: 60px;
   }
+
 }
