--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -46,11 +46,19 @@
   gap: 24px;
 }
 
+@media screen and (min-width:769px) and (max-width: 1024px) {
 
-@media screen and (min-width:0px) and (max-width:800px){
+  .nav-home a {
+    font-size: 18px;
+  }
+
+  .button-nav {
+    gap: 16px;
+  }
+}
+@media screen and (min-width:601px) and (max-width:768px){
   .nav-home-mobile{
     background-color: #F7F7F7;
-    margin-top: 16px;
     display: flex;
     width: 100vw;
     align-items: center;
@@ -58,13 +66,101 @@
     position: fixed;
     top: 0;
     z-index: 9999;
+    height: 90px;
+  }
+  .logo-img{
+    width: 40px;
+    height: 40px;
+  }
+  .nav-home-mobile a {
+    font-size: 18px;
+    color: $primary-color;
+  }
+
+  .nav-home-mobile a:hover {
+    cursor: pointer;
+    font-weight: 500;
+  }
+
+  .nav-home-mobile .active {
+    font-weight: 500;
+  }
+  .nav-home-mobile svg{
+    scale: 2;
+  }
+
+  .nav-home {
+    display: none;
+  }
+  .top-bar-search{
+    display: none;
+  }
+  .button-nav {
+    display: none;
+  }
+
+}
+@media screen and (min-width:426px) and (max-width:600px){
+  .nav-home-mobile{
+    background-color: #F7F7F7;
+    display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+    height: 80px;
   }
   .logo-img{
     width: 35px;
     height: 35px;
   }
   .nav-home-mobile a {
-    font-size: 18px;
+    color: $primary-color;
+    font-size: 17px;
+  }
+
+  .nav-home-mobile a:hover {
+    cursor: pointer;
+    font-weight: 500;
+  }
+
+  .nav-home-mobile .active {
+    font-weight: 500;
+  }
+  .nav-home-mobile svg{
+    scale: 1.6;
+  }
+
+  .nav-home {
+    display: none;
+  }
+  .top-bar-search{
+    display: none;
+  }
+  .button-nav {
+    display: none;
+  }
+
+}
+@media screen and (min-width:0px) and (max-width:425px){
+  .nav-home-mobile{
+    background-color: #F7F7F7;
+    display: flex;
+    width: 100vw;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
+    height: 70px;
+  }
+  .logo-img{
+    width: 35px;
+    height: 35px;
+  }
+  .nav-home-mobile a {
     color: $primary-color;
   }
 
@@ -84,6 +180,9 @@
     display: none;
   }
   .top-bar-search{
+    display: none;
+  }
+  .button-nav {
     display: none;
   }
 
