--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -92,7 +92,7 @@
   .nav-home {
     display: none;
   }
-  .top-bar-search{
+  .home-page.top-bar-search{
     display: none;
   }
   .button-nav {
@@ -136,7 +136,7 @@
   .nav-home {
     display: none;
   }
-  .top-bar-search{
+  .home-page.top-bar-search{
     display: none;
   }
   .button-nav {
@@ -179,7 +179,7 @@
   .nav-home {
     display: none;
   }
-  .top-bar-search{
+  .home-page.top-bar-search{
     display: none;
   }
   .button-nav {
