--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -37,7 +37,7 @@
           </button>
         </div>
         <div class="field">
-          <p>Informations supplémentaires</p>
+          <p class="title-boxlog">Informations supplémentaires</p>
         </div>
         <div class="field">
           <%= f.text_field :firstname, autocomplete: "firstname", placeholder: "Prénom" %>
