--- a/app/assets/stylesheets/pages/_log.scss
+++ b/app/assets/stylesheets/pages/_log.scss
@@ -38,6 +38,8 @@
   flex-direction: column;
 }
 .sign-up-in{
+  font-weight: 300;
+  line-height: 130%;
   color: $secondary-color;
   text-align: center;
   &:hover{
@@ -92,6 +94,9 @@
 .rgpd {
   width: 50vw;
 }
+.rgpd-label{
+  line-height: 130%;
+}
 .rgpd a {
   color: $secondary-color;
   font-weight: 500;
@@ -101,30 +106,110 @@
   margin-top:-32px;
   width: fit-content;
 }
+.title-boxlog{
+  font-size: 24px;
+  color: #fff;
+}
 
-@media screen and (max-width: 320px) {
-  .logo-log {
-    width: 150px;
+@media screen and (min-width:769px) and (max-width: 1024px) {
+  .log{
+    padding-bottom: 96px;
   }
-
-  .log {
-    min-height: 800px;
-  }
-
   .box-log {
     padding: 0px 4vw
   }
+  .form{
+    width: 53vw;
+    padding: 32px;
+  }
+  .btn-login {
+    width: 100%;
+    height: 65px;
+  }
 
+  .title-boxlog{
+    font-size: 18px;
+  }
+}
+@media screen and (min-width:601px) and (max-width: 768px) {
+  .log{
+    padding-bottom: 96px;
+  }
+  .box-log {
+    padding: 0px 4vw
+  }
   .form {
     width: 90vw;
   }
-
+  .actions{
+    margin: 0;
+  }
   .btn-login {
-    width: 80vw;
+    width: 100%;
     height: 65px;
   }
 
   .rgpd {
     width: 80vw;
+  }
+  .remember-me {
+    margin-top: 8px;
+  }
+  .forgot-password{
+    text-align: left;
+  }
+  .title-boxlog{
+    font-size: 18px;
+  }
+}
+@media screen and (min-width:426px) and (max-width: 600px) {
+  .box-log h1{
+    margin-top: 165px;
+  }
+  .logo-log {
+    width:30vw;
+    min-width: 160px;
+  }
+
+}
+@media screen and (min-width:0px) and (max-width: 600px) {
+  .log{
+    padding-bottom: 96px;
+  }
+  .box-log {
+    padding: 0px 4vw
+  }
+  .form {
+    width: 85vw;
+    padding: 24px 4vw
+  }
+  .actions{
+    margin: 0;
+  }
+  .btn-login {
+    width: 100%;
+    height: 65px;
+  }
+
+  .rgpd {
+    width: 80vw;
+  }
+  .remember-me {
+    margin-top: 8px;
+  }
+  .forgot-password{
+    text-align: left;
+  }
+  .title-boxlog{
+    font-size: 18px;
+  }
+}
+@media screen and (min-width:0px) and (max-width:425px) {
+  .logo-log {
+    width:40vw;
+    min-width: 130px;
+  }
+  .box-log h1{
+    margin-top: 145px;
   }
 }
